--- a/yard/grammar/html/hello-gramma.html
+++ b/yard/grammar/html/hello-gramma.html
@@ -4,6 +4,25 @@
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
  <meta name="author" content="APR Developers" /><meta name="email" content="dev@apr.apache.org" />
  <title>Download - The Apache Portable Runtime Project</title>
+     <style type="text/css">
+         a:link {
+             color: red;
+             text-decoration: none;
+         }
+         a:visited {
+             color: coral;
+             text-decoration: none;
+         }
+         a:hover {
+             color: green;
+             text-decoration: underline;
+             cursor: help;
+         }
+         a:active {
+             color: blue;
+             text-decoration: none;
+         }
+     </style>
  </head>
  <body bgcolor="#ffffff" text="#000000" link="#525D76">
 <p><a href="/"><img src="./images/apr_logo_wide.png" alt="The Apache Portable Runtime Project" border="0"/></a></p>
