--- a/yard/grammar/html/hmain.html
+++ b/yard/grammar/html/hmain.html
@@ -13,6 +13,7 @@
     <h1>这是标题1</h1>
     <h2>this is the title 2</h2>
     <h3>this is the title 3</h3>
+    <h4>this is the title 4</h4>
     <p>
         this is a default paragraph
     </p>
@@ -56,7 +57,7 @@
     <div class="nav-box">
         <div class="nav-top">全部商品分类</div>
         <ul>
-            <li><a href="">家用电器</a></li>
+            <li><a href="http://channel.jd.com/electronic.html">家用电器</a></li>
             <li><a href="">手机</a>、<a href="">数码</a>、<a href="">京东通信</a></li>
             <li><a href="">电脑</a>、<a href="">办公</a></li>
             <li><a href="">家居</a>、<a href="">家具</a>、<a href="">家装</a>、<a href="">厨具</a></li>
