--- a/yard/grammar/html/hmain.html
+++ b/yard/grammar/html/hmain.html
@@ -32,6 +32,7 @@
         <a href="#">无漂白薄皮核桃</a>
     </p>
     <p><span>500gx2包  ￥48.8</span></p>
+    <p style="cursor: wait"><a href="#" style="cursor: text">wait</a></p>
 
     <hr>
     <!-- 列表 -->
