add show time utils

--- a/yard/grammar/html/hmain.html
+++ b/yard/grammar/html/hmain.html
@@ -7,13 +7,16 @@
     <meta name="Keywords" content="html study">
     <meta name="Description" content="">
     <title>main html router</title>
+    <script type="text/javascript" src="scripts/bbx.js">
+    </script>
     <link rel="stylesheet" type="text/css" href="css/bbx.css">
 </head>
-<body>
+<body onload="onload()">
     <h1>这是标题1</h1>
     <h2>this is the title 2</h2>
     <h3>this is the title 3</h3>
     <h4>this is the title 4</h4>
+    <div class="time" id="time"></div>
     <p>
         this is a default paragraph
     </p>
