[php] add ajax post demo

--- a/yard/grammar/html/sub/jquery/hello-jquery.html
+++ b/yard/grammar/html/sub/jquery/hello-jquery.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="http://www.w3school.com.cn/jquery/jquery.js"></script>
-    <!--<script type="text/javascript" src="../../scripts/jquery-1.11.2.min.js"></script-->
+    <!-- <script type="text/javascript" src="http://www.w3school.com.cn/jquery/jquery.js"></script> -->
+    <script type="text/javascript" src="../../scripts/jquery-1.11.2.min.js"></script>
     <script type="text/javascript">
     $(document).ready(function(){
         // var url = "http://www.w3school.com.cn/ajax/demo_get.asp";
