--- a/yard/skills/vue-simple-demo/index.html
+++ b/yard/skills/vue-simple-demo/index.html
@@ -7,9 +7,36 @@
   <body>
     <h1>Just do it</h1>
     <hr>
-    <div id="diy"></div>
+    <div id="app">XXX</div>
     <hr>
-    <div id="app"></div>
+    <div id="diy2"></div>
+    <hr>
+    <div id="app2">app disabled</div>
     <script src="/dist/build.js"></script>
+    <style>
+      #app {
+        font-family: 'Avenir', Helvetica, Arial, sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        //text-align: center;
+        color: green;
+        margin-top: 30px;
+      }
+
+      h1, h2 {
+        font-weight: bold;
+        color: red;
+        text-shadow: 5px 5px 5px #FF0000;
+      }
+
+      /* ul {
+        list-style-type: none;
+        padding: 10;
+      }
+      li {
+        display: inline-block;
+        margin: 0 10px;
+      } */
+    </style>
   </body>
 </html>
