--- a/yard/skills/vue-simple-demo/index.html
+++ b/yard/skills/vue-simple-demo/index.html
@@ -23,11 +23,17 @@
         margin-top: 30px;
       }
 
-      h1, h2 {
+      h1 {
         font-weight: bold;
-        color: red;
-        text-shadow: 5px 5px 5px #FF0000;
+        color: reg;
+        text-shadow: 5px 5px 5px #00FF00;
       }
+      h2 {
+        font-weight: bold;
+        color: orange;
+        text-shadow: 5px 5px 5px #FFFF00;
+      }
+
 
       /* ul {
         list-style-type: none;
