--- a/yard/skills/vue-simple-demo/index.html
+++ b/yard/skills/vue-simple-demo/index.html
@@ -43,6 +43,19 @@
         display: inline-block;
         margin: 0 10px;
       } */
+
+      .expand-transition {
+        transition: all 3s ease;
+        height: 30px;
+        padding: 10px;
+        background-color: #eee;
+        overflow: hidden;
+      }
+      .expand-enter, .expand-leave {
+        height: 0;
+        padding: 0 10px;
+        opacity: 0;
+      }
     </style>
   </body>
 </html>
