--- a/yard/skills/00-web/fancybox-demo/hallo.htm
+++ b/yard/skills/00-web/fancybox-demo/hallo.htm
@@ -29,6 +29,8 @@
           'zoomSpeedOut': 3000,
           'overlayShow': true
         });
+        $('img').corner("round 20px").parent().css('padding', '8px').corner("bite 10px");
+        $('[data-fancybox="gallery-2]').corner("sharp tr br 20px");
       });
     </script>
   </head>
@@ -63,5 +65,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdn.bootcss.com/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+    <script src="./js/jquery.corner.js"></script>
   </body>
 </html>
