--- a/yard/skills/66-js/cookbook/ws-demo/src/test.html
+++ b/yard/skills/66-js/cookbook/ws-demo/src/test.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <h2>Just do it with WS</h2>
+    <h3 id="result">This is the Default Result</h3>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -20,9 +21,11 @@
       var ws = new WebSocket('ws://127.0.0.1:8181');
       ws.onopen = function() {
         console.log('client: ws connection is open');
+        $("#result").text("client: ws connection is open");
         ws.send('hello');
       };
       ws.onmessage = function(e) {
+        $("#result").text('client: recv ' + e.data);
         console.log('client: recv %s', e.data);
       };
     </script>
