--- a/yard/skills/66-java/spring-boot-study/spring-boot-swagger/src/main/resources/swagger-ui.html
+++ b/yard/skills/66-java/spring-boot-study/spring-boot-swagger/src/main/resources/swagger-ui.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Swagger UI</title>
+    <title>API文档</title>
     <link rel="icon" type="image/png" href="webjars/springfox-swagger-ui/images/favicon-32x32.png" sizes="32x32"/>
     <link rel="icon" type="image/png" href="webjars/springfox-swagger-ui/images/favicon-16x16.png" sizes="16x16"/>
     <link href='webjars/springfox-swagger-ui/css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
@@ -25,7 +25,6 @@
     <script src='webjars/springfox-swagger-ui/lib/jsoneditor.min.js' type='text/javascript'></script>
     <script src='webjars/springfox-swagger-ui/lib/marked.js' type='text/javascript'></script>
     <script src='webjars/springfox-swagger-ui/lib/swagger-oauth.js' type='text/javascript'></script>
-
     <script src='webjars/springfox-swagger-ui/springfox.js' type='text/javascript'></script>
 
     <!--国际化操作：选择中文版 -->
@@ -37,10 +36,10 @@
 <body class="swagger-section">
 <div id='header'>
     <div class="swagger-ui-wrap">
-        <a id="logo" href="http://swagger.io"><img class="logo__img" alt="swagger" height="30" width="30" src="webjars/springfox-swagger-ui/images/logo_small.png" /><span class="logo__title">swagger</span></a>
+        <a id="logo" href="http://swagger.io">![](webjars/springfox-swagger-ui/images/logo_small.png)<span class="logo__title">swagger</span></a>
         <form id='api_selector'>
             <div class='input'>
-                <select id="select_baseUrl" name="select_baseUrl"/>
+                <select id="select_baseUrl" name="select_baseUrl"></select>
             </div>
             <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
             <div id='auth_container'></div>
@@ -49,7 +48,7 @@
     </div>
 </div>
 
-<div id="message-bar" class="swagger-ui-wrap" data-sw-translate>&nbsp;</div>
+<div id="message-bar" class="swagger-ui-wrap" data-sw-translate> </div>
 <div id="swagger-ui-container" class="swagger-ui-wrap"></div>
 </body>
 </html>
