--- a/yard/skills/00-web/vue-simple-demo/index.html
+++ b/yard/skills/00-web/vue-simple-demo/index.html
@@ -12,7 +12,7 @@
     <div id="diy2"></div>
     <hr>
     <div id="app2">app disabled</div>
-    <script src="/dist/build.js"></script>
+    <script src="dist/build.js"></script>
     <style>
       #app {
         font-family: 'Avenir', Helvetica, Arial, sans-serif;
